2006-07-21  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkBind.c (TkBindInit): for REDO_KEYSYM_LOOKUP, change
	keysym-to-string mapping hash to use first name in ks_names.h instead of
	last (if there are multiple possibilities), e.g. "F11" instead of "L1".

	* macosx/tkMacOSXKeyboard.c (TkpGetKeySym): correct keysyms for pure
	modifier key presses [Bugs 700311, 1525905]; correct keysym for Enter
	key; add keysyms for new NumLock and Fn modifiers (added 2005-08-09).

2006-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (WmAttributesCmd, WmIconbitmapCmd): add support
	for weakly importing symbols not available on OSX 10.2 or 10.3, enables
	binaires built on later OSX versions to run on earlier ones.
	* macosx/README: document how to enable weak-linking; cleanup.
	* unix/configure.in: enforce requirement of OSX 10.2 for TkAqua; move
	* unix/tcl.m4:       Darwin specific checks & defines that are only
	relevant to the tcl build out of tcl.m4; restrict framework option to
	Darwin; cleanup quoting.
	* unix/configure: autoconf-2.13

	* macosx/tkMacOSXKeyEvent.c: ifdef out diagnostic messages to stderr.

	* macosx/tkMacOSXEvent.h:      standardize MAC_OS_X_VERSION_MAX_ALLOWED
	* macosx/tkMacOSXMenu.c:       checks per QA1316, ensure define can be
	* macosx/tkMacOSXMenubutton.c: overridden on command line (from default
	* macosx/tkMacOSXMenus.c:      of current OS version).
	* macosx/tkMacOSXMouseEvent.c:
	* macosx/tkMacOSXWm.c:

	* macosx/tkMacOSXCursor.c (TkMacOSXCursor):
	* macosx/tkMacOSXDebug.c (TkMacOSXGetNamedDebugSymbol):
	* macosx/tkMacOSXInit.c (Map): fix signed-with-unsigned comparison and
	other warnings from gcc4 -Wextra.

2006-07-14  Andreas Kupries  <andreask@activestate.com>

	* generic/tkWindow.c (Initialize): Modify change of 2006-05-25
	  (jeffh). Release mutex a bit earlier, to prevent lock when OS X
	  creates its console windows (recursively enters Tk_Init). Patch
	  by JeffH.
